[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "graficast"
version = "1.1.1"
description = "Graficast API"
authors = ["Yusuf Akçakaya"]
readme = "README.md"
packages = [{include = "api"}, {include = "core"}, {include = "services"}]

[tool.poetry.dependencies]
python = "^3.11"
annotated-types = "^0.7.0"
anyio = "^4.9.0"
cachetools = "^5.5.2"
certifi = "^2025.4.26"
charset-normalizer = "^3.4.2"
click = "^8.1.8"
colorama = "^0.4.6"
dnspython = "^2.7.0"
dotenv = "^0.9.9"
fastapi = "^0.110.0"
google-api-core = "^2.24.2"
google-api-python-client = "^2.169.0"
google-auth = "^2.40.1"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.2"
googleapis-common-protos = "^1.70.0"
h11 = "^0.16.0"
httplib2 = "^0.22.0"
idna = "^3.10"
motor = "^3.3.2"
numpy = "^2.2.5"
oauthlib = "^3.2.2"
pillow = "^11.2.1"
proto-plus = "^1.26.1"
protobuf = "^6.30.2"
pyasn1 = "^0.6.1"
pyasn1_modules = "^0.4.2"
pybind11 = "^2.13.6"
pycairo = "^1.28.0"
pydantic = "^2.6.3"
pydantic-settings = "^2.2.1"
pydantic_core = "^2.16.2"
pymongo = "^4.6.2"
pyparsing = "^3.2.3"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
requests-oauthlib = "^2.0.0"
rsa = "^4.9.1"
skia-python = "^87.8"
sniffio = "^1.3.1"
starlette = "^0.36.3"
typing-inspection = "^0.4.0"
typing_extensions = "^4.13.2"
uritemplate = "^4.1.1"
urllib3 = "^2.4.0"
uvicorn = "^0.27.1"
watchdog = "^6.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
black = "^24.2.0"
isort = "^5.13.2"
flake8 = "^7.0.0" 